# wfm-rule-suggestion-engine

./: .travis.yml  BUILD.bazel  LICENSE  README  WORKSPACE  maven_install.json
java/src/com/googleintern/wfm/ruleengine/action/: RuleSuggestionService.java
java/src/com/googleintern/wfm/ruleengine/module/: BUILD.bazel  Filter.java  PoolAssignment.java  Rule.java  UserPoolAssignment.java
main/java/src/com/googleintern/wfm/ruleengine/action/: BUILD.bazel  CsvParser.java  RuleSuggestionService.java
main/java/src/com/googleintern/wfm/ruleengine/module/: BUILD.bazel  Filter.java  PoolAssignment.java  Rule.java  UserPoolAssignment.java
src/main/java/com/googleintern/wfm/ruleengine/action/: BUILD.bazel  CasePoolIdAndPermissionIdGroupingUtil.java  CsvParser.java  CsvWriter.java  DataProcessing.java  DataProcessor.java  FiltersReduction.java  GeneralRulesForWorkgroupId.java  GroupByCasePoolIdAndPermissionId.java  GroupByWorkgroupId.java  KarnaughMapReduction.java  KarnaughMapRuleGenerator.java  KarnaughMapTableGenerator.java  KarnaughMapTermGenerator.java  ProductOfSumReduction.java  RuleConcentration.java  RuleSuggestionService.java  RuleValidation.java  WorkgroupIdGroupingUtil.java  WorkgroupIdRuleGenerator.java
src/main/java/com/googleintern/wfm/ruleengine/action/generator/: BUILD.bazel  CasePoolIdAndPermissionIdRuleGenerator.java  RuleIdGenerator.java  WorkgroupIdRuleGenerator.java
src/main/java/com/googleintern/wfm/ruleengine/action/service/: BUILD.bazel  RuleSuggestion.java  RuleSuggestionService.java  RuleSuggestionServiceImplementation.java
src/main/java/com/googleintern/wfm/ruleengine/model/: BUILD.bazel  FilterModel.java  KarnaughMapComparisionResultModel.java  PoolAssignmentModel.java  RuleModel.java  RuleValidationReport.java  UserModel.java  UserPoolAssignmentModel.java
src/test/java/com/googleintern/wfm/ruleengine/: BUILD.bazel  CasePoolIdAndPermissionIdRuleGeneratorTest.java  CsvParserTest.java  CsvWriterTest.java  DataProcessingTest.java  DataProcessorTest.java  FilterReductionTest.java  GeneralRulesForWorkgroupIdTest.java  GroupingTest.java  GroupingUtilTest.java  KarnaughMapReductionTest.java  KarnaughMapRuleGeneratorTest.java  KarnaughMapTableGeneratorTest.java  KarnaughMapTermGeneratorTest.java  KarnaughMapUtilTest.java  RuleConcentrationTest.java  RuleValidationReportTest.java  RuleValidationTest.java  WorkgroupIdRuleGeneratorTest.java
src/test/resources/com/googleintern/wfm/ruleengine/: csv_grouping_test_data.csv  csv_parser_test_data.csv  csv_rule_validation_expected_results.csv  csv_writer_expected_output.csv
