# action package
alias(
    name = "RuleSuggestionService_deploy.jar",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:RuleSuggestionService",
)

alias(
    name = "CsvParser",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
)

alias(
    name = "DataProcessor",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:DataProcessor",
)

alias(
    name = "WorkgroupIdGroupingUtil",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdGroupingUtil",
)

alias(
    name = "CasePoolIdAndPermissionIdGroupingUtil",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:CasePoolIdAndPermissionIdGroupingUtil",
)

alias(
    name = "WorkgroupIdRuleGenerator",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdRuleGenerator",
)

# model package
alias(
    name = "PoolAssignmentModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:PoolAssignmentModel",
)

alias(
    name = "UserPoolAssignmentModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:UserPoolAssignmentModel",
)

alias(
    name = "FilterModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:FilterModel",
)

alias(
    name = "RuleModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleModel",
)
