# action package
alias(
    name = "RuleSuggestionService_deploy.jar",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:RuleSuggestionService",
)

alias(
    name = "CsvParser",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
)

alias(
    name = "DataProcessor",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:DataProcessor",
)

alias(
    name = "WorkgroupIdGroupingUtil",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdGroupingUtil",
)

alias(
    name = "CasePoolIdAndPermissionIdGroupingUtil",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:CasePoolIdAndPermissionIdGroupingUtil",
)

alias(
    name = "WorkgroupIdRuleGenerator",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdRuleGenerator",
)

alias(
    name = "RuleValidation",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:RuleValidation",
)

alias(
    name = "KarnaughMapTermGenerator",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:KarnaughMapTermGenerator",
)

alias(
    name = "KarnaughMapReduction",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:KarnaughMapReduction",
)

alias(
    name = "KarnaughMapRuleGenerator",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:KarnaughMapRuleGenerator",
)

# model package
alias(
    name = "PoolAssignmentModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:PoolAssignmentModel",
)

alias(
    name = "UserModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:UserModel",
)

alias(
    name = "FilterModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:FilterModel",
)

alias(
    name = "RuleModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleModel",
)

alias(
    name = "RuleValidationReport",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleValidationReport",
)

alias(
    name = "KarnaughMapComparisionResultModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:KarnaughMapComparisionResultModel",
)

# test
alias(
    name = "CsvParserTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:CsvParserTest",
)

alias(
    name = "CsvWriterTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:CsvWriterTest",
)

alias(
    name = "DataProcessorTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:DataProcessorTest",
)

alias(
    name = "GroupingUtilTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:GroupingUtilTest",
)

alias(
    name = "WorkgroupIdRuleGeneratorTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:WorkgroupIdRuleGeneratorTest",
)

alias(
    name = "KarnaughMapTermGeneratorTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:KarnaughMapTermGeneratorTest",
)

alias(
    name = "KarnaughMapRuleGeneratorTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:KarnaughMapRuleGeneratorTest",
)

alias(
    name = "KarnaughMapReductionTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:KarnaughMapReductionTest",
)

alias(
    name = "KarnaughMapUtilTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:KarnaughMapUtilTest",
)
