# action package
alias(
    name = "RuleSuggestionService_deploy.jar",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action/service:RuleSuggestionService",
)

alias(
    name = "CsvParser",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
)

alias(
    name = "DataProcessor",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:DataProcessor",
)

alias(
    name = "WorkgroupIdGroupingUtil",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdGroupingUtil",
)

alias(
    name = "CasePoolIdAndPermissionIdGroupingUtil",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:CasePoolIdAndPermissionIdGroupingUtil",
)

alias(
    name = "WorkgroupIdRuleGenerator",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action/generator:WorkgroupIdRuleGenerator",
)

alias(
    name = "RuleValidation",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:RuleValidation",
)

# model package
alias(
    name = "PoolAssignmentModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:PoolAssignmentModel",
)

alias(
    name = "UserModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:UserModel",
)

alias(
    name = "FilterModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:FilterModel",
)

alias(
    name = "RuleModel",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleModel",
)

alias(
    name = "RuleValidationReport",
    actual = "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleValidationReport",
)

# test
alias(
    name = "CsvParserTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:CsvParserTest",
)

alias(
    name = "DataProcessorTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:DataProcessorTest",
)

alias(
    name = "GroupingUtilTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:GroupingUtilTest",
)

alias(
    name = "WorkgroupIdRuleGeneratorTest",
    actual = "//src/test/java/com/googleintern/wfm/ruleengine:WorkgroupIdRuleGeneratorTest",
)
