java_binary(
    name = "CsvParserTest",
    srcs = ["CsvParserTest.java"],
    main_class = "src.test.java.com.googleintern.wfm.ruleengine.CsvParserTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)
