load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "CsvParserTest",
    size = "large",
    srcs = ["CsvParserTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.CsvParserTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)
