load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "CsvParserTest",
    size = "large",
    srcs = ["CsvParserTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.CsvParserTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "CsvWriterTest",
    size = "large",
    srcs = ["CsvWriterTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.CsvWriterTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvWriter",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "DataProcessorTest",
    size = "large",
    srcs = ["DataProcessorTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.DataProcessorTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:DataProcessor",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "GroupingUtilTest",
    size = "large",
    srcs = ["GroupingUtilTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.GroupingUtilTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CasePoolIdAndPermissionIdGroupingUtil",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:DataProcessor",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdGroupingUtil",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "WorkgroupIdRuleGeneratorTest",
    size = "large",
    srcs = ["WorkgroupIdRuleGeneratorTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.WorkgroupIdRuleGeneratorTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:DataProcessor",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdGroupingUtil",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/action/generator:WorkgroupIdRuleGenerator",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "RuleValidationTest",
    size = "large",
    srcs = ["RuleValidationTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.RuleValidationTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:RuleValidation",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "RuleValidationReportTest",
    srcs = ["RuleValidationReportTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.RuleValidationReportTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:RuleValidation",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "FilterReductionTest",
    srcs = ["FilterReductionTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.FilterReductionTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:FiltersReduction",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_test(
    name = "CasePoolIdAndPermissionIdRuleGeneratorTest",
    srcs = ["CasePoolIdAndPermissionIdRuleGeneratorTest.java"],
    test_class = "src.test.java.com.googleintern.wfm.ruleengine.CasePoolIdAndPermissionIdRuleGeneratorTest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/action/generator:CasePoolIdAndPermissionIdRuleGenerator",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)
