java_binary(
    name = "PoolAssignment",
    srcs = ["PoolAssignment.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//main/java/src/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_binary(
    name = "UserPoolAssignment",
    srcs = ["UserPoolAssignment.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":Filter",
        ":PoolAssignment",
        "//main/java/src/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_binary(
    name = "Filter",
    srcs = [":Filter.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//main/java/src/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_binary(
    name = "Rule",
    srcs = [":Rule.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":Filter",
        "//main/java/src/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_library(
    name = "module_dependencies",
    visibility = ["//visibility:public"],
    exports = [
        "//main/java/src/com/googleintern/wfm/ruleengine/module:Filter",
        "//main/java/src/com/googleintern/wfm/ruleengine/module:PoolAssignment",
        "//main/java/src/com/googleintern/wfm/ruleengine/module:Rule",
        "//main/java/src/com/googleintern/wfm/ruleengine/module:UserPoolAssignment",
    ],
)
