java_binary(
    name = "RuleSuggestionService",
    srcs = ["RuleSuggestionService.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":maven_dependency",
    ],
)

java_binary(
    name = "CsvParser",
    srcs = ["CsvParser.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_binary(
    name = "CsvWriter",
    srcs = ["CsvWriter.java"],
    main_class = "src.main.java.com.googleintern.wfm.ruleengine.action.CsvWriter",
    visibility = ["//visibility:public"],
    deps = [
        ":maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:FilterModel",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleModel",
    ],
)

java_binary(
    name = "DataProcessor",
    srcs = ["DataProcessor.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_binary(
    name = "WorkgroupIdGroupingUtil",
    srcs = ["WorkgroupIdGroupingUtil.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":CsvParser",
        ":maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_binary(
    name = "CasePoolIdAndPermissionIdGroupingUtil",
    srcs = ["CasePoolIdAndPermissionIdGroupingUtil.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_binary(
    name = "GeneralRulesForWorkgroupId",
    srcs = ["GeneralRulesForWorkgroupId.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_library(
    name = "maven_dependency",
    exported_plugins = [":autovalue_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        ":autocommon",
        ":autovalue",
        ":guava",
        ":junit",
        ":opencsv",
        ":protobuf",
    ],
)

java_library(
    name = "autovalue",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_auto_value_auto_value_annotations",
    ],
)

java_library(
    name = "guava",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_google_guava_failureaccess",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "guava_test",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_google_guava_guava_testlib",
        "@maven//:com_google_guava_guava_tests",
    ],
)

java_library(
    name = "junit",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "autocommon",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_google_auto_auto_common",
    ],
)

java_library(
    name = "protobuf",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
    ],
)

java_library(
    name = "opencsv",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_opencsv_opencsv",
    ],
)

java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_auto_value_auto_value_annotations",
    ],
)
