java_binary(
    name = "PoolAssignmentModel",
    srcs = ["PoolAssignmentModel.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_binary(
    name = "UserModel",
    srcs = ["UserModel.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":FilterModel",
        ":PoolAssignmentModel",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_binary(
    name = "FilterModel",
    srcs = ["FilterModel.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_binary(
    name = "RuleModel",
    srcs = ["RuleModel.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":FilterModel",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_binary(
    name = "RuleValidationReport",
    srcs = ["RuleValidationReport.java"],
    visibility = ["//visibility:public"],
    deps = [
        "PoolAssignmentModel",
        ":UserModel",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
    ],
)

java_library(
    name = "model_dependencies",
    visibility = ["//visibility:public"],
    exports = [
        "//src/main/java/com/googleintern/wfm/ruleengine/model:FilterModel",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:PoolAssignmentModel",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleModel",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:RuleValidationReport",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:UserModel",
    ],
)
