java_binary(
    name = "WorkgroupIdRuleGenerator",
    srcs = ["WorkgroupIdRuleGenerator.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":ruleIdGenerator_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_binary(
    name = "CasePoolIdAndPermissionIdRuleGenerator",
    srcs = ["CasePoolIdAndPermissionIdRuleGenerator.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":ruleIdGenerator_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_binary(
    name = "RuleIdGenerator",
    srcs = ["RuleIdGenerator.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/googleintern/wfm/ruleengine/action:maven_dependency",
        "//src/main/java/com/googleintern/wfm/ruleengine/model:model_dependencies",
    ],
)

java_library(
    name = "ruleIdGenerator_dependency",
    visibility = ["//visibility:public"],
    exports = [
        ":RuleIdGenerator",
    ],
)
